force-app/main/default/objects/Nota_Ticket__c/Nota_Ticket__c.object-meta.xml
<CustomObject>
    <label>Nota Ticket</label>
    <nameField>
        <label>Nombre de Nota Ticket</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notas Ticket</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>