force-app/main/default/objects/Nota_Ticket__c/fields/Accion__c.field-meta.xml
<CustomField>
    <fullName>Accion__c</fullName>
    <description>Indica la acción que se va a realizar con el Ticket</description>
    <label>Acción</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asignar</fullName>
            </value>
            <value>
                <fullName>Cerrar</fullName>
            </value>
            <value>
                <fullName>Pdt Terceros</fullName>
            </value>
            <value>
                <fullName>Comentarios</fullName>
                <default>true</default>
                <label>Comentarios</label>
            </value>
            <value>
                <fullName>Rechazar</fullName>
            </value>
            <value>
                <fullName>Resolver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>