force-app/main/default/objects/Nota_Ticket__c/fields/Asignado_a__c.field-meta.xml
<CustomField>
    <fullName>Asignado_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asignado a</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Notas_Ticket</relationshipName>
    <type>Lookup</type>
</CustomField>