force-app/main/default/objects/Nota_Ticket__c/fields/Creador_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Creador_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creador Ticket</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Notas_Ticket1</relationshipName>
    <type>Lookup</type>
</CustomField>