force-app/main/default/objects/Nota_Ticket__c/fields/Equipo_Asignado__c.field-meta.xml
<CustomField>
    <fullName>Equipo_Asignado__c</fullName>
    <formula>IF(ISBLANK( Asignado_a__c),&quot;&quot;,if( Asignado_a__r.Profile.Name=&quot;Cliente AYESA&quot;, &quot;CLIENTE&quot;, &quot;CONSORCIO&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipo Asignado</label>
    <type>Text</type>
</CustomField>