force-app/main/default/objects/Nota_Ticket__c/fields/Proveedor2__c.field-meta.xml
<CustomField>
    <fullName>Proveedor2__c</fullName>
    <label>Proveedor</label>
    <length>150</length>
    <type>Text</type>
</CustomField>