force-app/main/default/objects/Nota_Ticket__c/validationRules/Accion_Asignar.validationRule-meta.xml
<ValidationRule>
    <fullName>Accion_Asignar</fullName>
    <active>true</active>
    <description>Si selecciona &quot;Asignar&quot; solo puede modificar los campos &quot;Asignado a&quot; y &quot;Comentarios&quot;</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Accion__c , &quot;Asignar&quot;), 
NOT(ISBLANK(Proveedor2__c)) 
)</errorConditionFormula>
    <errorDisplayField>Accion__c</errorDisplayField>
    <errorMessage>Si selecciona &apos;&apos;Asignar&apos;&apos; solo puede modificar los campos &apos;&apos;Asignado a&apos;&apos; y &apos;&apos;Comentarios&apos;&apos;</errorMessage>
</ValidationRule>