force-app/main/default/objects/Nota_Ticket__c/validationRules/Accion_Modificacion_Cerrar_Resolver.validationRule-meta.xml
<ValidationRule>
    <fullName>Accion_Modificacion_Cerrar_Resolver</fullName>
    <active>true</active>
    <description>Modificación solo puede modificar el Comentario</description>
    <errorConditionFormula>AND( 
OR( 
ISPICKVAL(Accion__c , &quot;Comentarios&quot;), 
ISPICKVAL(Accion__c , &quot;Cerrar&quot;), 
ISPICKVAL(Accion__c , &quot;Resolver&quot;) 
), 
OR( 
NOT(ISBLANK(Proveedor2__c)), 
NOT(ISBLANK(Asignado_a__c)) 
) 
)</errorConditionFormula>
    <errorDisplayField>Accion__c</errorDisplayField>
    <errorMessage>Con el tipo de &apos;&apos;Acción&apos;&apos; seleccionado solo puede modificar el campo &apos;&apos;Comentarios&apos;&apos;.</errorMessage>
</ValidationRule>