force-app/main/default/objects/Nota_Ticket__c/validationRules/Accion_Nuevo.validationRule-meta.xml
<ValidationRule>
    <fullName>Accion_Nuevo</fullName>
    <active>true</active>
    <description>Si selecciona &quot;Nuevo&quot; solo puede modificar los campos &quot;Comentarios&quot;</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Accion__c , &quot;Nuevo&quot;), 
OR(NOT(ISBLANK(Asignado_a__c)),NOT(ISBLANK( Proveedor2__c ))) 
)</errorConditionFormula>
    <errorDisplayField>Accion__c</errorDisplayField>
    <errorMessage>Si selecciona &apos;&apos;Pdt Proveedor&apos;&apos; solo puede modificar los campos &apos;&apos;Proveedor&apos;&apos; y &apos;&apos;Comentarios&apos;&apos;</errorMessage>
</ValidationRule>