force-app/main/default/objects/Nota_Ticket__c/validationRules/Accion_Resuelta.validationRule-meta.xml
<ValidationRule>
    <fullName>Accion_Resuelta</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Ticket__r.Estado__c,&quot;Resuelto&quot;), OR(ISPICKVAL(Accion__c , &quot;Resolver&quot;),ISPICKVAL(Accion__c , &quot;Rechazar&quot;)),NOT($Permission.AdministratorException))</errorConditionFormula>
    <errorMessage>No es posible seleccionar la acción elegida sobre un Ticket ya resuelto.</errorMessage>
</ValidationRule>