force-app/main/default/objects/Nota_Ticket__c/validationRules/Acciones_permitidas.validationRule-meta.xml
<ValidationRule>
    <fullName>Acciones_permitidas</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
OR( 
AND($Profile.Name&lt;&gt;&quot;Cliente AYESA&quot;,ISPICKVAL(Accion__c , &quot;Cerrar&quot;)), 
AND($Profile.Name=&quot;Cliente AYESA&quot;,Ticket__r.OwnerId &lt;&gt; $User.Id, 
OR(ISPICKVAL(Accion__c , &quot;Cerrar&quot;),ISPICKVAL(Accion__c , &quot;Asignar&quot;),ISPICKVAL(Accion__c , &quot;Resolver&quot;),ISPICKVAL(Accion__c , &quot;Rechazar&quot;),ISPICKVAL(Accion__c , &quot;Pdt Terceros&quot;))), 
AND($Profile.Name=&quot;Cliente AYESA&quot;, Ticket__r.OwnerId = $User.Id, 
OR(ISPICKVAL(Accion__c , &quot;Rechazar&quot;),ISPICKVAL(Accion__c , &quot;Pdt Terceros&quot;), ISPICKVAL(Accion__c , &quot;Resolver&quot;))), 
AND(ISPICKVAL(Ticket__r.Estado__c,&quot;Cerrado&quot;), 
OR(ISPICKVAL(Accion__c , &quot;Asignar&quot;),ISPICKVAL(Accion__c , &quot;Resolver&quot;),ISPICKVAL(Accion__c , &quot;Rechazar&quot;),ISPICKVAL(Accion__c , &quot;Pdt Terceros&quot;),ISPICKVAL(Accion__c , &quot;Cerrar&quot;))), 
AND(ISPICKVAL(Ticket__r.Estado__c,&quot;Rechazado&quot;), 
OR(ISPICKVAL(Accion__c , &quot;Resolver&quot;),ISPICKVAL(Accion__c , &quot;Rechazar&quot;),ISPICKVAL(Accion__c , &quot;Pdt Terceros&quot;))), 
AND(ISPICKVAL(Accion__c , &quot;Asignar&quot;),NOT($Permission.Permisos_de_CRI)) 
), 
NOT($Permission.AdministratorException))</errorConditionFormula>
    <errorMessage>Usted no tiene permisos para realizar la acción seleccionada.</errorMessage>
</ValidationRule>