force-app/main/default/objects/Nota_Ticket__c/validationRules/ProveedorInformado.validationRule-meta.xml
<ValidationRule>
    <fullName>ProveedorInformado</fullName>
    <active>true</active>
    <description>Para la acción &quot;Pdt Terceros&quot; es obligatorio que informe el campo Proveedor.</description>
    <errorConditionFormula>AND(ISPICKVAL( Accion__c , &quot;Pdt Terceros&quot;), ISBLANK( Proveedor2__c ) )</errorConditionFormula>
    <errorMessage>Para la acción &apos;&apos;Pdt Proveedor&apos;&apos; es obligatorio que informe el campo &apos;&apos;Proveedor&apos;&apos;.</errorMessage>
</ValidationRule>