force-app/main/default/objects/Nota_Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ticket__c</columns>
    <columns>Accion__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>